# project-scaffold-setup-skills

./: AGENTS.md  LICENSE  README.md
skill-eval-workspace/: grade_runs.py
skill-eval-workspace/cpp-project-setup/iteration-1/eval-0/with_skill/run-1/outputs/src/: CMakeLists.txt  core.cpp  main.cpp
skill-eval-workspace/cpp-project-setup/iteration-1/eval-0/without_skill/run-1/outputs/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  metrics.json  vcpkg.json
skill-eval-workspace/cpp-project-setup/iteration-1/eval-0/without_skill/run-1/outputs/include/image_tool/: image_info.hpp
skill-eval-workspace/cpp-project-setup/iteration-1/eval-0/without_skill/run-1/outputs/src/: main.cpp
skill-eval-workspace/cpp-project-setup/iteration-1/eval-0/without_skill/run-1/outputs/src/image_tool/: image_info.cpp
skill-eval-workspace/cpp-project-setup/iteration-1/eval-0/without_skill/run-1/outputs/tests/: test_image_info.cpp  test_main.cpp
skill-eval-workspace/cpp-project-setup/iteration-1/eval-0/without_skill/run-1/outputs/tools/: make_sample_png.py
skill-eval-workspace/cpp-project-setup/iteration-1/eval-1/with_skill/run-1/outputs/src/: CMakeLists.txt  core.cpp  main.cpp
skill-eval-workspace/cpp-project-setup/iteration-1/eval-1/without_skill/run-1/outputs/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  metrics.json  vcpkg.json
skill-eval-workspace/cpp-project-setup/iteration-1/eval-1/without_skill/run-1/outputs/include/greeter/: greeter.hpp
skill-eval-workspace/cpp-project-setup/iteration-1/eval-1/without_skill/run-1/outputs/src/: greeter.cpp  main.cpp
skill-eval-workspace/cpp-project-setup/iteration-1/eval-1/without_skill/run-1/outputs/tests/: CMakeLists.txt  test_greeter.cpp
skill-eval-workspace/cpp-project-setup/iteration-1/eval-2/with_skill/run-1/outputs/src/: CMakeLists.txt  core.cpp  main.cpp
skill-eval-workspace/cpp-project-setup/iteration-1/eval-2/without_skill/run-1/outputs/: CMakeLists.txt  CMakePresets.json  metrics.json  vcpkg.json
skill-eval-workspace/cpp-project-setup/iteration-1/eval-2/without_skill/run-1/outputs/cmake/: math_utils-config.cmake.in  toolchain-x64-windows.cmake  tools.cmake
skill-eval-workspace/cpp-project-setup/iteration-1/eval-2/without_skill/run-1/outputs/include/math_utils/: math_utils.hpp
skill-eval-workspace/cpp-project-setup/iteration-1/eval-2/without_skill/run-1/outputs/include/math_utils/math_utils/: arithmetic.hpp  constants.hpp
skill-eval-workspace/cpp-project-setup/iteration-1/eval-2/without_skill/run-1/outputs/scripts/: bootstrap.ps1  format.ps1
skill-eval-workspace/cpp-project-setup/iteration-1/eval-2/without_skill/run-1/outputs/src/: arithmetic.cpp  constants.cpp
skill-eval-workspace/cpp-project-setup/iteration-1/eval-2/without_skill/run-1/outputs/tests/: CMakeLists.txt  test_arithmetic.cpp
skill-eval-workspace/embedded-project-setup/iteration-1/eval-0/without_skill/run-1/outputs/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  metrics.json  openocd.cfg
skill-eval-workspace/embedded-project-setup/iteration-1/eval-0/without_skill/run-1/outputs/cmake/: toolchain-arm-none-eabi.cmake
skill-eval-workspace/embedded-project-setup/iteration-1/eval-0/without_skill/run-1/outputs/include/: stm32g030xx.h  system_stm32g0xx.h
skill-eval-workspace/embedded-project-setup/iteration-1/eval-0/without_skill/run-1/outputs/linker/: STM32G030C8Tx_FLASH.ld
skill-eval-workspace/embedded-project-setup/iteration-1/eval-0/without_skill/run-1/outputs/src/: main.c  startup_stm32g030xx.s  system_stm32g0xx.c
skill-eval-workspace/embedded-project-setup/iteration-1/eval-2/with_skill/run-1/outputs/: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  README.md  metrics.json  project.uvprojx
skill-eval-workspace/embedded-project-setup/iteration-1/eval-2/with_skill/run-1/outputs/.github/workflows/: firmware.yml
skill-eval-workspace/embedded-project-setup/iteration-1/eval-2/with_skill/run-1/outputs/Inc/: stm32f4xx_hal.h
skill-eval-workspace/embedded-project-setup/iteration-1/eval-2/with_skill/run-1/outputs/Src/: main.c  stm32f4xx_hal.c
skill-eval-workspace/embedded-project-setup/iteration-1/eval-2/with_skill/run-1/outputs/cmake/: arm-none-eabi-gcc.cmake
skill-eval-workspace/embedded-project-setup/iteration-1/eval-2/with_skill/run-1/outputs/scripts/: analyze.ps1  analyze.sh  build.sh  flash.ps1  flash.sh  format.ps1  format.sh  openocd_server.ps1  openocd_server.sh
skill-eval-workspace/embedded-project-setup/iteration-1/eval-2/with_skill/run-1/outputs/startup/: startup.c
skill-eval-workspace/embedded-project-setup/iteration-1/eval-2/without_skill/run-1/outputs/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  metrics.json
skill-eval-workspace/embedded-project-setup/iteration-1/eval-2/without_skill/run-1/outputs/Drivers/CMSIS/Include/: core_cm4.h  stdint.h
skill-eval-workspace/embedded-project-setup/iteration-1/eval-2/without_skill/run-1/outputs/Inc/: main.h
skill-eval-workspace/embedded-project-setup/iteration-1/eval-2/without_skill/run-1/outputs/Src/: main.c
skill-eval-workspace/embedded-project-setup/iteration-1/eval-2/without_skill/run-1/outputs/cmake/: toolchain-arm-none-eabi.cmake
skill-eval-workspace/embedded-project-setup/iteration-1/eval-2/without_skill/run-1/outputs/linker/: STM32F446RETx_FLASH.ld
skill-eval-workspace/embedded-project-setup/iteration-1/eval-2/without_skill/run-1/outputs/scripts/: debug_openocd.sh  debug_vscode.sh  flash_openocd.sh
skill-eval-workspace/embedded-project-setup/iteration-1/eval-2/without_skill/run-1/outputs/startup/: startup_stm32f446xx.s
skills/cpp-project-setup/: SKILL.md
skills/cpp-project-setup/assets/: CMakeLists.txt  CMakePresets.json  extensions.json  settings.json  vcpkg.json
skills/embedded-project-setup/assets/: .clangd  .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile  extensions.json  launch.json  settings.json  tasks.json
skills/python-fastapi-setup/assets/: .dockerignore  Dockerfile  docker-compose.yml  gunicorn.conf.py  pyproject.toml
(+152 files in other folders)
