[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "@PACKAGE@"
version = "0.1.0"
description = "FastAPI service scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic-settings",
  "gunicorn",
  "uvicorn-worker",
]

[project.optional-dependencies]
dev = [
  "httpx",
  "pytest",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
